# EnchantmentArtExtender

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  components.cmake  config.schema.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
Artifacts/: EnchantmentArtExtender.bsa
Data/: EnchantmentArtExtender.bsa  EnchantmentArtExtender.esl
Data/SKSE/Plugins/: EnchantmentArtExtender.ini
Data/SKSE/Plugins/EnchantmentArtExtender/: VWChaos.json  VWFire.json  VWFireShock.json  VWFrost.json  VWFrostFire.json  VWFrostShock.json  VWShock.json
Data/Source/Scripts/: EAE_ModObjectsScript.psc
Data/Textures/SeaSparrow/Effects/: SEA_Empty.dds
Papyrus/Source/Scripts/: SEA_EnchantmentExtender.psc
cmake/: Plugin.h.in  Version.h.in  headerlist.cmake  sourcelist.cmake  version.rc.in
cmake/Scripts/: CMake-Copy-Archive.cmake  CMake-Copy-Artifacts.cmake  CMake-Copy-Scripts.cmake  CMake-Copy-Sources.cmake
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/jsoncpp/: portfile.cmake
cmake/ports/magic-enum/: portfile.cmake  usage  vcpkg.json
data/: EnchantmentArtExtender.bsa  EnchantmentArtExtender.esl
data/SKSE/Plugins/: EnchantmentArtExtender.ini
exampleJSON/: SEA_ErrorConfig.json  SEA_FireEffects.json  SEA_FireEffects_EFX.json  SEA_FrostEffects.json  SEA_IncorrectJSON.json  SEA_MissingMasterConfig.json  SEA_OutdatedConfig.json  SEA_ShockEffects.json  sneaky.ini
include/: PCH.h  actorEventHandler.h  actorEventManager.h  artSwap.h  cache.h  configParser.h  equipEventHandler.h  helperFunctions.h  settingsReader.h  singletonHolder.h
src/: PCH.h  actorEventHandler.cpp  actorEventManager.cpp  actorEventManager.h  artSwap.cpp  cache.cpp  cache.h  configParser.cpp  equipEventHandler.cpp  helperFunctions.cpp  main.cpp  settingsReader.cpp  settingsReader.h  singletonHolder.cpp
src/Common/: JSONUtils.hpp  PCH.cpp  PCH.h
src/Data/: Lookup.h  ModObjectManager.cpp  ModObjectManager.h
src/EffectManager/: EffectManager.cpp  EffectManager.h
src/Export/: SKSEPlugin.cpp
src/Hooks/: Hooks.cpp  Hooks.h
src/RE/: Offset.h  WeaponEnchantmentController.h
src/Settings/: INISettings.cpp  INISettings.h  JSONSettings.cpp  JSONSettings.h
src/Settings/INI/: INISettings.cpp  INISettings.h
src/Settings/JSON/: JSONSettings.cpp  JSONSettings.h
src/common/: PCH.h
src/enchantmentManager/: enchantmentManager.cpp  enchantmentManager.h
src/export/: SKSEPlugin.cpp
src/hooks/: hooks.cpp  hooks.h
src/utilities/: utilities.h
